# tickbar

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benches/: aggregation.rs
python/: README.md  bench_tickbar.py  pyproject.toml  tickbar.pyi
python/tickbar/: __init__.py  _native.pyi
src/: adjustments.rs  aggregator.rs  alignment.rs  bar.rs  lib.rs  tick.rs
src/ffi/: mod.rs  python.rs
src/utils/: fixed_point.rs  mod.rs  time.rs
tests/: integration.rs
