[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "tickbar"
version = "0.1.0"
description = "High-performance tick-to-bar aggregator — 6.6M ticks/s, 1.4× pandas"
readme = "python/README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "tickbar contributors" }]

[tool.maturin]
features = ["python"]
